# decision-engine

./: .dockerignore  .env  .gitignore  .karigar-pr-body-244.md  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.docs  Dockerfile.postgres  LICENSE  Makefile  README.md  build.rs  config.example.toml  cypress.config.js  decision-engine.postman_collection.json  demo.md  diesel_pg.toml  docker-compose.local.yaml  docker-compose.otel.yaml  docker-compose.override.yml  docker-compose.yaml  entrypoint.sh  groovy.Dockerfile  justfile  oneclick.sh  package-lock.json  package.json  super_router_constants.json  test_euclid.sh  test_sdk.py
.config/: nextest.toml
analytics/: README.md  run_migrations.sh
config/: config.example.toml  development.toml  docker-configuration.toml  grafana-datasource.yaml  otel-collector-config.yaml  prometheus.yaml  sr_cost_routing_constants.json
crates/gsm/: Cargo.toml
crates/gsm/data/: gsm.csv
crates/gsm/src/: config.rs  error.rs  interface.rs  lib.rs  loader.rs  lookup.rs  source.rs  types.rs
crates/open-router/: .dockerignore  .env  .gitignore  API_REFERENCE.md  Cargo.toml  Makefile  SETUP.md  docker-compose.yaml
crates/open-router/.github/workflows/: docker-publish.yml
crates/open-router/config/: development.toml  docker-configuration.toml
crates/open-router/migrations/00000000000000_diesel_initial_setup/: up.sql
crates/open-router/routing-config/: priority_logic.txt
crates/open-router/src/: api_client.rs  app.rs  config.rs  decider.rs  error.rs  feedback.rs  generics.rs  lib.rs  merchant_config_util.rs  middleware.rs  redis.rs  storage.rs  types.rs  utils.rs
crates/open-router/src/decider/: gatewaydecider.rs
crates/open-router/src/decider/configs/: env_vars.rs
crates/open-router/src/decider/gatewaydecider/: Utils.rs  constants.rs  flow_new.rs  flows.rs  gw_filter.rs  gw_scoring.rs  runner.rs  types.rs  validators.rs
crates/open-router/src/decider/storage/: utils.rs
crates/open-router/src/decider/storage/utils/: gateway_bank_emi_support.rs  gateway_card_info.rs  merchant_gateway_account.rs  merchant_gateway_card_info.rs  txn_card_info.rs
crates/open-router/src/error/: transforms.rs
crates/open-router/src/feedback/: constants.rs  gateway_scoring_service.rs  types.rs  utils.rs
crates/open-router/src/feedback/gateway_elemination_scoring/: flow.rs
crates/open-router/src/feedback/gateway_elemination_scoring_v3/: flow.rs
crates/open-router/src/feedback/gateway_elimination_scoring/: flow.rs
crates/open-router/src/feedback/gateway_selection_scoring_v3/: flow.rs
crates/open-router/src/redis/: cache.rs  commands.rs  feature.rs  types.rs
crates/open-router/src/routes/: decide_gateway.rs  decision_gateway.rs  health.rs  update_gateway_score.rs  update_score.rs
crates/open-router/src/storage/: db.rs  schema.rs  types.rs
crates/open-router/src/types/: bank_code.rs  card.rs  country.rs  currency.rs  customer.rs  emi_bank_code.rs  feature.rs  gateway.rs  gateway_bank_emi_support.rs  gateway_bank_emi_support_v2.rs  gateway_card_info.rs  gateway_outage.rs  gateway_payment_flow.rs  gateway_payment_method_flow.rs  gateway_routing_input.rs  isin_routes.rs  merchant.rs  merchant_gateway_account_sub_info.rs  merchant_gateway_card_info.rs  merchant_gateway_payment_method_flow.rs  merchant_priority_logic.rs  offer.rs  order.rs  order_metadata_v2.rs  payment.rs  payment_flow.rs  service_configuration.rs  source_object_id.rs  tenant.rs  tenant_config.rs  token_bin_info.rs  txn_details.rs  txn_offer.rs  txn_offer_detail.rs  txn_offer_info.rs  user_eligibility_info.rs
crates/open-router/src/types/card/: card_info.rs  card_type.rs  isin.rs  txn_card_info.rs  vault_provider.rs
crates/open-router/src/types/country/: country_iso.rs
crates/open-router/src/types/merchant/: id.rs  merchant_account.rs  merchant_gateway_account.rs  merchant_iframe_preferences.rs
crates/open-router/src/types/money/: internal.rs
crates/open-router/src/types/order/: id.rs  udfs.rs
crates/open-router/src/types/payment/: payment_method.rs
crates/open-router/src/types/tenant/: tenant_config.rs  tenant_config_filter.rs
crates/open-router/src/types/transaction/: id.rs
crates/open-router/src/types/txn_details/: internal_metadata.rs  types.rs
crates/procesmo/: Cargo.toml  Makefile  index.html
crates/procesmo/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: app.rs  configs.rs  consts.rs  errors.rs  file_storage.rs  handlers.rs  headers_extractors.rs  lib.rs  utils.rs
crates/simulator/src/file_storage/: aws_s3.rs  file_system.rs
crates/simulator/src/handlers/: health.rs  simulate.rs
crates/simulator/src/handlers/simulate/: baseline.rs  file_uploader.rs  model.rs  multipart_extractor.rs  types.rs
cypress/: README.md
decision_engine_sdk/: client.py  exceptions.py
docs/: analytics.mdx  api-overview.md  api-reference.md  api-reference1.md  benchmarks.mdx  cab_service_framework_extension.md  clickhouse-analytics.mdx  configuration.md  dashboard-guide.mdx  dashboard.mdx  docs.json  dual-protocol-layer.md  executive_summary_multi_domain_framework.md  food_delivery_framework_extension.md  hs-merchant-sso.md  implementation_status.md  installation.md  introduction.mdx  local-setup.md  mint.json  openapi.json  payment-audit.mdx  setup-guide-mysql.md  setup-guide-postgres.md  setup-guide.md  setup-guide1.md  setup-guide_postgres.md  universal_framework_adapter_pattern.md
helm-charts/: Chart.yaml  README.md  install.sh  update-dependencies.sh  values-hypersense.yaml  values-local.yaml  values-mysql.yaml  values-postgresql.yaml  values.yaml  verify-chart.sh
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
nginx/: nginx.conf
routing-config/: config.yaml  priority_logic.txt  requirements.txt  run_setup.sh  setup.py
scripts/: .env  README.md  ci-checks.sh  create_analytics_topics.sh  decision_engine_api.py  filter-gsm.py  gen_local_token.sh  hyperswitch_api.py  load_test.js  load_test_report.js  payment_operations.py  (+6 more)
(+692 files in other folders)
