[package]
name = "open_router"
version = "0.1.3"
edition = "2021"
default-run = "open_router"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["middleware"]
release = [
    "kms-aws",
    "middleware",
    "limit",
    "kms-hashicorp-vault",
    "external_key_manager_mtls",
]
kms-aws = ["dep:aws-config", "dep:aws-sdk-kms"]
kms-hashicorp-vault = ["dep:vaultrs"]
limit = []
middleware = []
console = ["tokio/tracing", "dep:console-subscriber"]
external_key_manager = []
external_key_manager_mtls = ["external_key_manager", "reqwest/rustls-tls"]

[dependencies]
async-trait = "0.1.81"
aws-config = { version = "1.5.5", optional = true }
aws-sdk-kms = { version = "1.40.0", optional = true }
base64 = "0.22.1"
bytes = "1.7.1"
gethostname = "0.5.0"
rustc-hash = "2.0"
once_cell = "1.19.0"
vaultrs = { version = "0.7.2", optional = true }
bb8 = "0.8"
rand = "0.8.5"
rand_distr = "0.4"

async-bb8-diesel = { git = "https://github.com/jarnura/async-bb8-diesel", rev = "53b4ab901aab7635c8215fd1c2d542c8db443094" }
redis_interface = { git = "https://github.com/juspay/hyperswitch.git", tag = "2024.09.30.0" }
# Tokio Dependencies
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
hyper = "1.4.1"
tower = { version = "0.5.0", features = ["limit", "buffer", "load-shed"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-attributes = "0.1.27"
tracing-subscriber = { version = "0.3.18", default-features = true, features = [
    "env-filter",
    "json",
    "registry",
] }
console-subscriber = { version = "0.4.0", optional = true }

diesel = { version = "2.2.5", features = ["mysql", "serde_json", "time"] }
diesel-async = { version = "0.5.0", features = ["mysql", "deadpool"] }


serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
josekit = "0.8.7"

thiserror = "1.0.63"
config = "0.14.0"
serde_path_to_error = "0.1.16"
error-stack = "0.4.1"
fred = { version = "7.1.2", features = ["metrics", "partial-tracing", "subscriber-client", "check-unresponsive"] }
masking = { git = "https://github.com/juspay/hyperswitch", tag = "v1.111.1" }
ring = { version = "0.17.12", features = ["std"] }
hex = "0.4.3"
time = { version = "0.3.36", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v7", "fast-rng"] }
reqwest = { version = "0.12.7", features = ["json", "__rustls"] }

nanoid = "0.4.0"
mysqlclient-sys = { version = "0.4.2", features = ["buildtime_bindgen"] }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4"
criterion = "0.5.1"
axum-test = "15.6.0"

[build-dependencies]
cargo_metadata = "0.18.1"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
deprecated = "allow"

[lints.clippy]
as_conversions = "warn"
expect_used = "warn"
missing_panics_doc = "warn"
panic = "warn"
panic_in_result_fn = "warn"
panicking_unwrap = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

[[bin]]
name = "open_router"
