[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[features]
release = ["aws_s3"]
aws_s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sts"]

[dependencies]
async-trait = "0.1.87"
aws-config = { version = "1.5.17", optional = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.77.0", optional = true }
aws-sdk-sts = { version = "1.61.0", optional = true }
dyn-clone = "1.0.19"
error-stack = "0.4.1"
futures = "0.3.31"
hyper = "1.6.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
config = "0.15.9"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
tracing = { version = "0.1.41" }
rand = "0.8.5"
csv = "1.3.1"
chrono = { version = "0.4.4", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["trace"] }
bytes = "1.10.1"
jsonwebtoken = "9.2.0"
strum = { version = "0.26.2", features = ["derive"] }

dynamo = { version = "0.1.0", path = "../dynamo" }
redis_interface = { git = "https://github.com/juspay/hyperswitch.git", tag = "2024.09.30.0" }
masking = { git = "https://github.com/juspay/hyperswitch.git", tag = "2024.09.30.0" }

[[bin]]
name = "simulator"
